fix contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,7 +15,7 @@
 
 header {
     background-color: var(--primary-color);
-    color: var(--accent2-color);
+    color: var(--accent1-color);
 }
 
 body {
@@ -33,7 +33,7 @@ footer {
 h1,
 h2 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    color: white;
 }
 
 nav,
@@ -57,7 +57,7 @@ footer {
 h2 {
     background-color: var(--accent1-color);
     text-align: center;
-    opacity: 1;
+    opacity: 1.5;
     width: 100%;
 }
 
